# wolf_3D

./: .gitignore  CMakeLists.txt  Makefile  README-ru.md  README.md  main.c
frameworks/SDL2.framework/Versions/A/Headers/: SDL_opengl.h  SDL_opengl_glext.h
frameworks/SDL2_ttf.framework/Frameworks/FreeType.framework/Versions/A/Headers/freetype/: ftoutln.h  ftrender.h  ftstroke.h
frameworks/SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Headers/freetype/: ftimage.h
frameworks/SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/Current/Headers/freetype/: ftpfr.h  fttrigon.h  t1tables.h
frameworks/SDL2_ttf.framework/Versions/Current/Frameworks/FreeType.framework/Headers/freetype/: ftglyph.h  fttypes.h
frameworks/SDL2_ttf.framework/Versions/Current/Frameworks/FreeType.framework/Versions/A/Headers/freetype/: freetype.h
include/: ft_matrix33.h  ft_sdl.h  ft_vector2.h  ft_wolf.h  ft_wolf3D.h  my_cl.h
includes/: conus.cl  cylinder.cl  ft_matrix.cl  ft_matrix.h  ft_rtv1.h  ft_scene.h  ft_vector.cl  ft_vector.h  renderer.c  renderer.cl  rotation.cl  sphere.cl  utils.cl
libft/include/: ft_libftu.h
libft/src/: get_next_line.c
maps/: map01.wolf3d  map02.wolf3d  map03.wolf3d  map04.wolf3d  map05.wolf3d
src/: cl_create_compile_program.c  cl_create_input.c  cl_create_queue.c  cl_get_devices.c  cl_get_platforms.c  cl_get_results.c  cl_set_args.c  create_texture_patterns.c  floor_casting.c  ft_ftoa.c  ft_matrix2.c  ft_matrix33.c  ft_vector2.c  main.c  move_player.c  ray_cast.c  rotate_matrix.c  sdl.c  sdl_hook.c  utils.c
